--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/openmoko/openmoko-usb-oui">USB Product ID Allocations for Free Software / Open Hardware</a>
+                                    <a href="https://dcgross.com/accomplish-dread-tasks/">The Psychology of Dreaded Tasks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17288815">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17288958">
                                         
-                                            21 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=seba_dos1">seba_dos1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528752916"
+                                            href="https://news.ycombinator.com/user?id=danicgross">danicgross</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528754128"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     78 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528779609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528780207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
