--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -365,7 +365,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17280969">
                                         
-                                            182 comments
+                                            183 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sdogruyol">sdogruyol</a></strong> &nbsp;•&nbsp;
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://arxiv.org/abs/1805.12177">Why do CNNs generalize so poorly to small image transformations?</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17278735">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            40 comments
+                                            34 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mathattack">mathattack</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528646823"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    141 points
+                                    142 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528780207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528780810" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
