--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://engineering.opsgenie.com/run-native-java-using-graalvm-in-aws-lambda-with-golang-ba86e27930bf">Using GraalVM to Run Native Java in AWS Lambda with Golang</a>
+                                    <a href="https://github.com/neovim/neovim/commit/44c6deb91ac917703c157d564eb3accbff4d37af">Neovim 0.3 released</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284022">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284599">
                                         
-                                            29 comments
+                                            55 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=CSDude">CSDude</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724150"
+                                            href="https://news.ycombinator.com/user?id=fmoralesc">fmoralesc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528728084"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     143 points
                                 </span>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.openai.com/language-unsupervised/">Improving Language Understanding with Unsupervised Learning</a>
+                                    <a href="https://engineering.opsgenie.com/run-native-java-using-graalvm-in-aws-lambda-with-golang-ba86e27930bf">Using GraalVM to Run Native Java in AWS Lambda with Golang</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286810">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284022">
                                         
-                                            9 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=gdb">gdb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528740752"
+                                            href="https://news.ycombinator.com/user?id=CSDude">CSDude</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528724150"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    142 points
+                                    143 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528782607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528783210" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
