--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=wuschel">wuschel</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528670227"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    1039 points
+                                    1040 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=mcargian">mcargian</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528716971"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    585 points
+                                    586 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528743083"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    431 points
+                                    433 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528673328"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    359 points
+                                    360 points
                                 </span>
                             </td>
                         </tr>
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528736202"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    308 points
+                                    309 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.androidauthority.com/state-of-usb-type-c-870996/">USB Type-C is still a mess</a>
+                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in Counties Where Home Values Grew Most</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17285411">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289449">
                                         
-                                            201 comments
+                                            153 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kissickas">kissickas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528733045"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528759098"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     287 points
                                 </span>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528785009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528785607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
