--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://joeyh.name/blog/entry/the_single_most_important_criteria_when_replacing_Github/">The single most important criteria when replacing GitHub</a>
+                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17248713">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
                                         
-                                            131 comments
+                                            106 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=edward">edward</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528303670"
+                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528743459"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    211 points
+                                    215 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528785009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528785607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
