--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -527,19 +527,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.cntraveler.com/story/nearly-80-percent-of-japans-airbnbs-were-just-removed">Nearly 80% of Japan’s Airbnbs removed in response to new home-share law</a>
+                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in Counties Where Home Values Grew Most</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263565">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289449">
                                         
-                                            318 comments
+                                            158 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vincvinc">vincvinc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528446147"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528759098"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    288 points
+                                    291 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in Counties Where Home Values Grew Most</a>
+                                    <a href="https://www.androidauthority.com/state-of-usb-type-c-870996/">USB Type-C is still a mess</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17289449">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17285411">
                                         
-                                            153 comments
+                                            203 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528759098"
+                                            href="https://news.ycombinator.com/user?id=kissickas">kissickas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528733045"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    287 points
+                                    288 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528785607" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528786210" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
