--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
+                                    <a href="http://www.typescriptlang.org/docs/handbook/release-notes/typescript-2-9.html">TypeScript 2.9 is now available</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17242026">
                                         
-                                            108 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528743459"
+                                            href="https://news.ycombinator.com/user?id=hamstercat">hamstercat</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528232589"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    233 points
+                                    234 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528788010" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528788609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
