--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://chris408.com/post/microsoft-azure-application-gateway-exposes-your-backend-health-api-server/?HN">Azure requires internet accessible ports to monitor your back end instances</a>
+                                    <a href="https://www.businessinsider.es/theranos-founder-elizabeth-holmes-new-startup-report-2018-6?r=US&IR=T">Theranos founder Elizabeth Holmes is seeking investors for a new company</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17285774">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289298">
                                         
-                                            4 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=chris408">chris408</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528734813"
+                                            href="https://news.ycombinator.com/user?id=dacm">dacm</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528757360"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    20 points
+                                    10 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528788609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528789207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
