--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -269,7 +269,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17286207">
                                         
-                                            172 comments
+                                            174 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=leonagano">leonagano</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theguardian.com/media/2018/jun/10/cost-of-government-rises-when-local-newspaper-closes-study-finds">Cost of government rises when local newspaper closes, study finds</a>
+                                    <a href="https://github.com/git-federation/gitpub">GitPub: An extenstion to ActivityPub for web-based Git services federation</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280712">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17288727">
                                         
-                                            33 comments
+                                            28 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=santix">santix</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528673390"
+                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528752265"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     122 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528790407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528791006" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
