--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -461,13 +461,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17290029">
                                         
-                                            105 comments
+                                            108 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sohkamyung">sohkamyung</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528766200"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    155 points
+                                    158 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/neovim/neovim/commit/44c6deb91ac917703c157d564eb3accbff4d37af">Neovim 0.3 released</a>
+                                    <a href="https://engineering.opsgenie.com/run-native-java-using-graalvm-in-aws-lambda-with-golang-ba86e27930bf">Using GraalVM to Run Native Java in AWS Lambda with Golang</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284599">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284022">
                                         
-                                            58 comments
+                                            29 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fmoralesc">fmoralesc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528728084"
+                                            href="https://news.ycombinator.com/user?id=CSDude">CSDude</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528724150"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    144 points
+                                    145 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528792210" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528792808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
