--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://engineering.opsgenie.com/run-native-java-using-graalvm-in-aws-lambda-with-golang-ba86e27930bf">Using GraalVM to Run Native Java in AWS Lambda with Golang</a>
+                                    <a href="https://github.com/neovim/neovim/commit/44c6deb91ac917703c157d564eb3accbff4d37af">Neovim 0.3 released</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284022">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17284599">
                                         
-                                            29 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=CSDude">CSDude</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724150"
+                                            href="https://news.ycombinator.com/user?id=fmoralesc">fmoralesc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528728084"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     144 points
                                 </span>
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528752265"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    127 points
+                                    128 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17288958">
                                         
-                                            43 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=danicgross">danicgross</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528792210" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528792808" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
