--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -263,19 +263,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.graphql.guide/introducing-the-graphql-guide-11a5ae48628a?source=search_post---------0">New Book from John Resig, the GraphQL Guide</a>
+                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17289048">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
                                         
-                                            67 comments
+                                            123 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528754804"
+                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528743459"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    269 points
+                                    271 points
                                 </span>
                             </td>
                         </tr>
@@ -287,19 +287,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/s/trustissues/the-lifespan-of-a-lie-d869212b1f62">The Lifespan of a Lie – Why can’t we escape the Stanford Prison Experiment?</a>
+                                    <a href="https://blog.graphql.guide/introducing-the-graphql-guide-11a5ae48628a">John Resig: Introducing the GraphQL Guide</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17287319">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289048">
                                         
-                                            122 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fermigier">fermigier</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528743459"
+                                            href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    264 points
+                                    270 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528793410" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528794012" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
