--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -293,13 +293,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17287239">
                                         
-                                            240 comments
+                                            243 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528743083"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    455 points
+                                    461 points
                                 </span>
                             </td>
                         </tr>
@@ -551,7 +551,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in Counties Where Home Values Grew Most</a>
+                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in U.S. Counties Where Home Prices Grew Most</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -563,7 +563,7 @@
                                             href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528759098"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    365 points
+                                    369 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528794606" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528795209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
