--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lsds.doc.ic.ac.uk/blog/do-we-need-distributed-stream-processing">Do We Need Distributed Stream Processing?</a>
+                                    <a href="https://www.reuters.com/article/us-swiss-vote-sovereign/swiss-vote-on-whether-to-introduce-real-money-plan-idUSKBN1J60C0">Radical Swiss financial reform campaign faces defeat</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286935">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277319">
                                         
-                                            22 comments
+                                            110 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=domargan">domargan</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528741504"
+                                            href="https://news.ycombinator.com/user?id=mikehotel">mikehotel</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528622804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    108 points
+                                    109 points
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17288321">
                                         
-                                            71 comments
+                                            74 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=seba_dos1">seba_dos1</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528752916"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528795209" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528795810" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
