--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.yours.org/content/first-atomic-bet-on-bitcoin-cash-using-new-opcodes-fc83fe2e0eda">First atomic bet on Bitcoin Cash using new opcodes</a>
+                                    <a href="https://www.wsj.com/articles/how-a-powerful-spy-camera-invented-at-duke-ended-up-in-chinas-hands-1528714895">Invented at Duke, Financed in Beijing: Powerful Camera Shows China’s AI Ambition</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283865">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289232">
                                         
-                                            47 comments
+                                            18 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528722670"
+                                            href="https://news.ycombinator.com/user?id=mudil">mudil</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528756617"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     75 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528796409" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528797008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
