--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/openmoko/openmoko-usb-oui">USB Product ID Allocations for Free Software / Open Hardware</a>
+                                    <a href="https://polyaxon.com/">Polyaxon – An open source platform for reproducible machine learning at scale</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17288815">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17276509">
                                         
-                                            37 comments
+                                            21 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=seba_dos1">seba_dos1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528752916"
+                                            href="https://news.ycombinator.com/user?id=jonbaer">jonbaer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528604691"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    106 points
+                                    108 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=triska">triska</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528750455"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    97 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528801807" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528802409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
