--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/tducret/amazon-scraper-python">Amazon2csv: Amazon products scraper to CSV (no API token required)</a>
+                                    <a href="https://www.openbsd.org/papers/BeckPledgeUnveilBSDCan2018.pdf">Pledge and Unveil in OpenBSD [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17280460">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277067">
                                         
-                                            52 comments
+                                            34 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tducret">tducret</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528668773"
+                                            href="https://news.ycombinator.com/user?id=gshrikant">gshrikant</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528616553"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    124 points
+                                    125 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528803009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528803607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
