--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -407,17 +407,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.darpa.mil/work-with-us/heilmeier-catechism">The Heilmeier Catechism (1977)</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-11/germany-orders-daimler-to-recall-774-000-diesel-cars-in-europe">Germany Orders Daimler to Recall 774,000 Diesels in Europe</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17272801">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17286400">
                                         
-                                            19 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rfreytag">rfreytag</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528549147"
+                                            href="https://news.ycombinator.com/user?id=felixbraun">felixbraun</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528737843"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     97 points
                                 </span>
@@ -431,19 +431,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-11/germany-orders-daimler-to-recall-774-000-diesel-cars-in-europe">Germany Orders Daimler to Recall 774,000 Diesels in Europe</a>
+                                    <a href="https://www.darpa.mil/work-with-us/heilmeier-catechism">The Heilmeier Catechism (1977)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286400">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17272801">
                                         
-                                            67 comments
+                                            19 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=felixbraun">felixbraun</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528737843"
+                                            href="https://news.ycombinator.com/user?id=rfreytag">rfreytag</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528549147"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    96 points
+                                    97 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528803009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528803607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
