--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17272516" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://grunfy.com/scaler.html">Interactive guitar scales diagrams</a>
+                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
                                 </span>
                             </td>
                         </tr>
@@ -527,19 +527,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
+                                    <a href="https://blog.graphql.guide/introducing-the-graphql-guide-11a5ae48628a">John Resig: Introducing the GraphQL Guide</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289048">
                                         
-                                            176 comments
+                                            85 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528615562"
+                                            href="https://news.ycombinator.com/user?id=sbr464">sbr464</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528754804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    324 points
+                                    325 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://lwn.net/SubscriberLink/756192/ebada7ecad32f3ad/">Advanced computing with IPython</a>
+                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17236788">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
                                         
-                                            104 comments
+                                            176 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=leephillips">leephillips</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528199656"
+                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528615562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     324 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528803009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528803607" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
