--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17289801" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
+                                    <a href="https://github.com/thosakwe/t2b">T2b – A wicked-powerful text macro language for building binary files</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://milanote.com/the-work/the-story-behind-susan-kares-iconic-design-work-for-apple">The Story Behind Susan Kare’s Iconic Design Work for Apple</a>
+                                    <a href="https://github.com/dgwozdz/HN_SO_analysis">Popularity of technology on Stack Overflow and Hacker News: Causality Analysis</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17290055">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17277550">
                                         
-                                            36 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=oliebol">oliebol</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528766726"
+                                            href="https://news.ycombinator.com/user?id=l____">l____</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528628221"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    148 points
+                                    150 points
                                 </span>
                             </td>
                         </tr>
@@ -293,13 +293,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17288727">
                                         
-                                            37 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528752265"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    144 points
+                                    145 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528805406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528806008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
