--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17289801" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
+                                    <a href="https://github.com/thosakwe/t2b">T2b – A wicked-powerful text macro language for building binary files</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=mcargian">mcargian</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528716971"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    595 points
+                                    596 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528805406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528806008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
