--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17289801" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
+                                    <a href="https://github.com/thosakwe/t2b">T2b – A wicked-powerful text macro language for building binary files</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17281824" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17283525" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.quod.us/article/rss-feeds-for-major-us-newspapers">22 top US newspapers in an RSS OPML list</a>
+                                    <a href="https://github.com/aribornstein/TensorflowJS4Azure/blob/master/README.md">One Click Pose Estimation</a>
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=gscott">gscott</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528743083"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    507 points
+                                    508 points
                                 </span>
                             </td>
                         </tr>
@@ -455,17 +455,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
+                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in U.S. Counties Where Home Prices Grew Most</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289449">
                                         
-                                            84 comments
+                                            226 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528316094"
+                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528759098"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     397 points
                                 </span>
@@ -479,19 +479,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.zillow.com/research/birth-rates-home-values-20165/">Birth Rates Dropped Most in U.S. Counties Where Home Prices Grew Most</a>
+                                    <a href="https://jochen-hoenicke.de/trezor-power-analysis/">Extracting the private key from a TREZOR with an oscilloscope (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17289449">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250697">
                                         
-                                            225 comments
+                                            84 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jseliger">jseliger</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528759098"
+                                            href="https://news.ycombinator.com/user?id=mlejva">mlejva</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528316094"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    395 points
+                                    397 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528805406" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528806008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
