--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://stratechery.com/2018/the-scooter-economy/">The Scooter Economy</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-11/seattle-poised-to-repeal-tax-on-amazon-and-large-employers">Seattle Poised to Repeal Tax on Amazon and Large Employers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284094">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17290289">
                                         
-                                            98 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528724637"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528771019"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    29 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528807806" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528808407" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
